wellesleynet/roles/k8s/files/frigate.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: frigate
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frigate
  serviceName: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      # 1jane has the TPU
      nodeName: 1jane
      containers:
      - image: blakeblackshear/frigate:0.6.0
        imagePullPolicy: Always
        name: frigate
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: frigate-config
          mountPath: /config
        - name: frigate-cache
          mountPath: /cache
        - name: frigate-shm
          mountPath: /dev/shm
        - name: tpu
          mountPath: /dev/apex_0
        resources:
          limits:
            gpu.intel.com/i915: 1
        securityContext:
          privileged: true
      volumes:
      - name: frigate-config
        configMap:
          name: frigate-config
      - name: frigate-cache
        emptyDir:
          medium: Memory
      - name: frigate-shm
        emptyDir:
          medium: Memory
      - name: tpu
        hostPath:
          path: /dev/apex_0
          type: CharDevice
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: frigate
spec:
  selector:
    app: frigate
  ports:
  - name: frigate
    port: 5000
    protocol: TCP
    targetPort: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/auth-url: "https://authelia.kiski.co/api/verify"
    nginx.ingress.kubernetes.io/auth-signin: "https://authelia.kiski.co"
spec:
  rules:
  - host: frigate.kiski.co
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frigate
            port:
              number: 5000
  tls:
  - hosts:
    - frigate.kiski.co
    secretName: frigate-kiski-co-tls
